Fixed margin top on smaller screen, border would run into follow link

--- a/css/site.css
+++ b/css/site.css
@@ -9,6 +9,12 @@ body {
     border-top: 6px solid #444;
 }
 
+@media screen and (max-width: 860px) {
+    body {
+        margin-top: 0;
+    }
+}
+
 h1 {
     font-family: 'Alfa Slab One', cursive;
     font-size: 64px;
